// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`runServer should allow server to be stopped, http stop server: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "Registered tool: usePatternFlyDocs",
    ],
    [
      "Registered tool: fetchDocs",
    ],
    [
      "Registered tool: componentSchemas",
    ],
    [
      "test-server server running on HTTP transport",
    ],
    [
      "test-server shutting down...",
    ],
    [
      "test-server closed!
",
    ],
  ],
}
`;

exports[`runServer should allow server to be stopped, stdio stop server: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "Registered tool: usePatternFlyDocs",
    ],
    [
      "Registered tool: fetchDocs",
    ],
    [
      "Registered tool: componentSchemas",
    ],
    [
      "test-server server running on stdio transport",
    ],
    [
      "test-server shutting down...",
    ],
    [
      "test-server closed!
",
    ],
  ],
}
`;

exports[`runServer should attempt to run server, create transport, connect, and log success message: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "test-server-4 server running on stdio transport",
    ],
  ],
  "hasDebugLogs": true,
  "mcpServer": [
    [
      {
        "name": "test-server-4",
        "version": "1.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [],
}
`;

exports[`runServer should attempt to run server, disable SIGINT handler: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "test-server-7 server running on stdio transport",
    ],
  ],
  "hasDebugLogs": true,
  "mcpServer": [
    [
      {
        "name": "test-server-7",
        "version": "1.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [],
  "registerTool": [],
}
`;

exports[`runServer should attempt to run server, enable SIGINT handler explicitly: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "test-server-8 server running on stdio transport",
    ],
  ],
  "hasDebugLogs": true,
  "mcpServer": [
    [
      {
        "name": "test-server-8",
        "version": "1.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [],
}
`;

exports[`runServer should attempt to run server, register a tool: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "Registered tool: loremIpsum",
    ],
    [
      "test-server-5 server running on stdio transport",
    ],
    [
      "Built-in tool at index 0 is missing the static name property, "toolName"",
    ],
    [
      "Tool "loremIpsum" has a non Zod inputSchema. This may cause unexpected issues.",
    ],
  ],
  "hasDebugLogs": true,
  "mcpServer": [
    [
      {
        "name": "test-server-5",
        "version": "1.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [
    "loremIpsum",
  ],
}
`;

exports[`runServer should attempt to run server, register multiple tools: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "Registered tool: loremIpsum",
    ],
    [
      "Registered tool: dolorSit",
    ],
    [
      "test-server-6 server running on stdio transport",
    ],
    [
      "Built-in tool at index 0 is missing the static name property, "toolName"",
    ],
    [
      "Built-in tool at index 1 is missing the static name property, "toolName"",
    ],
    [
      "Tool "loremIpsum" has a non Zod inputSchema. This may cause unexpected issues.",
    ],
    [
      "Tool "dolorSit" has a non Zod inputSchema. This may cause unexpected issues.",
    ],
  ],
  "hasDebugLogs": true,
  "mcpServer": [
    [
      {
        "name": "test-server-6",
        "version": "1.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [
    "loremIpsum",
    "dolorSit",
  ],
}
`;

exports[`runServer should attempt to run server, use custom options: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "test-server-3 server running on stdio transport",
    ],
  ],
  "hasDebugLogs": true,
  "mcpServer": [
    [
      {
        "name": "test-server-3",
        "version": "1.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [],
}
`;

exports[`runServer should attempt to run server, use default tools, http: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "Registered tool: usePatternFlyDocs",
    ],
    [
      "Registered tool: fetchDocs",
    ],
    [
      "Registered tool: componentSchemas",
    ],
    [
      "test-server-2 server running on HTTP transport",
    ],
  ],
  "hasDebugLogs": true,
  "mcpServer": [
    [
      {
        "name": "test-server-2",
        "version": "1.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [
    "usePatternFlyDocs",
    "fetchDocs",
    "componentSchemas",
  ],
}
`;

exports[`runServer should attempt to run server, use default tools, stdio: diagnostics 1`] = `
{
  "events": [
    [
      "Server logging enabled.",
    ],
    [
      "Server stats enabled.",
    ],
    [
      "No external tools loaded.",
    ],
    [
      "Registered tool: usePatternFlyDocs",
    ],
    [
      "Registered tool: fetchDocs",
    ],
    [
      "Registered tool: componentSchemas",
    ],
    [
      "test-server-1 server running on stdio transport",
    ],
  ],
  "hasDebugLogs": true,
  "mcpServer": [
    [
      {
        "name": "test-server-1",
        "version": "1.0.0",
      },
      {
        "capabilities": {
          "tools": {},
        },
      },
    ],
  ],
  "process": [
    [
      "SIGINT",
      [Function],
    ],
  ],
  "registerTool": [
    "usePatternFlyDocs",
    "fetchDocs",
    "componentSchemas",
  ],
}
`;

exports[`runServer should handle errors during connection: Connection failed 1`] = `"Connection failed"`;

exports[`runServer should handle errors during server creation: Server creation failed 1`] = `"Server creation failed"`;
